C2 xgb-regression and C3 model tuning done

--- a/notebooks/01-classiffication-with-xgb.ipynb
+++ b/notebooks/01-classiffication-with-xgb.ipynb
@@ -811,6 +811,124 @@
     "accuracy = 1 - cv_results['test-error-mean'].iloc[-1]\n",
     "print(f'accuracy: {round(accuracy, 6)}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Measuring the AUC: for this, we need to change the `metrics` parameter when running the `cv_results`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train-auc-mean</th>\n",
+       "      <th>train-auc-std</th>\n",
+       "      <th>test-auc-mean</th>\n",
+       "      <th>test-auc-std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.942242</td>\n",
+       "      <td>0.000899</td>\n",
+       "      <td>0.921780</td>\n",
+       "      <td>0.005403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.960882</td>\n",
+       "      <td>0.001369</td>\n",
+       "      <td>0.945141</td>\n",
+       "      <td>0.008937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.968627</td>\n",
+       "      <td>0.002563</td>\n",
+       "      <td>0.951584</td>\n",
+       "      <td>0.006230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.975862</td>\n",
+       "      <td>0.001657</td>\n",
+       "      <td>0.957878</td>\n",
+       "      <td>0.005808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.980463</td>\n",
+       "      <td>0.002479</td>\n",
+       "      <td>0.962099</td>\n",
+       "      <td>0.003871</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   train-auc-mean  train-auc-std  test-auc-mean  test-auc-std\n",
+       "0        0.942242       0.000899       0.921780      0.005403\n",
+       "1        0.960882       0.001369       0.945141      0.008937\n",
+       "2        0.968627       0.002563       0.951584      0.006230\n",
+       "3        0.975862       0.001657       0.957878      0.005808\n",
+       "4        0.980463       0.002479       0.962099      0.003871"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_results = xgb.cv(dtrain=df_dmatrix, params=params, nfold=3, num_boost_round=5,\n",
+    "                    metrics='auc', as_pandas=True, seed=123)\n",
+    "\n",
+    "cv_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.962099\n"
+     ]
+    }
+   ],
+   "source": [
+    "auc = cv_results['test-auc-mean'].iloc[-1]\n",
+    "print(f'AUC: {round(auc, 6)}')"
+   ]
   }
  ],
  "metadata": {
